fixed popup z-index

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,8 +5,6 @@
   right: 0;
   bottom: 0;
   left: 0;
-  opacity: 0;
-  z-index: -2;
   display: flex;
   justify-content: center;
   align-items: center;
